--- a/ProPonti/css/feature.css
+++ b/ProPonti/css/feature.css
@@ -9,9 +9,9 @@
 }
 
 header{
-    color: black;
+    color: rgb(0, 0, 0);
     
     display: grid;
     place-items: center;
-    min-height: 100vh;
+    min-height: 18vh;
 }
