--- a/ProPonti/css/general.css
+++ b/ProPonti/css/general.css
@@ -5,13 +5,13 @@ box-sizing: border-box;
 text-rendering: optimizeLegibility;
 -webkit-font-smooting: antialiased
 gra
-font-kerning: auto
+font-kerning: auto;
 
 }
 
 html{
     font-size: 100%;
-    line-height: 1.15;
+    line-height: 1.2;
     -webkit-text-size-adjust: 100%;
 
     --scroll-behavior: smooth
@@ -20,11 +20,15 @@ html{
 }
 
 body{
-    color: white;
+    color: rgb(0, 0, 0);
     font-family: Tahoma,Verdana, sans-serif;
-    background: black;
+    background: rgb(232, 232, 232);
     margin: 0;
+    min-height: 100vh;
+    position: relative;
+    top: -9vh;
 }
+
 
 .menu {
     margin: 0;
@@ -34,6 +38,13 @@ body{
 
 .menu li {
     list-style: none;
+    
+}
+
+
+.menu img {
+    width: 100%;
+    height: auto;
 
 }
 
@@ -42,11 +53,91 @@ body{
     text-decoration: none;
 
 }
+* {box-sizing:border-box}
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 5000px;
+  position: relative;
+  margin: auto;
+}
 
+/* Hide the images by default */
+.mySlides {
+  display: none;
 
-.image {
-    max-width: 800;
-    height: auto;
-    border: 3px solid red;
-}  
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
