--- a/ProPonti/css/header.css
+++ b/ProPonti/css/header.css
@@ -1,22 +1,31 @@
 header {
-    min-height: 100vh;
-    background-color: grey; transpa
+    min-height: 0vh;
+    background-color: rgb(0, 0, 0),
    background-;
     
     background-repeat: no-repeat;
     background-position: 45% 50%;
     background-size: cover;
-    
-       
-
 }
 
+.logo {
+    min-height: 10vh;
+    background-color: rgb(0, 0, 0),
+    background-repeat: no-repeat;
+    background-position: 45% 50%;
+    background-size: cover;
+}
 
-
+.logo .img {
+    max-width: 75%;
+    max-height: auto;
+    position: 10%;
+    z-index: 3;
+}
 
 .main-nav {
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0);
     position: fixed;
     display: flex;
     justify-content: center;
@@ -24,37 +33,35 @@ header {
     left: 0px;
     top: 0px;
     z-index: 2;
-    
-    color: aqua;
-    
+ 
 }
 
 
 .main-nav .menu {
-    font-size: 2.75rem;
-    line-height: 1;
+    font-size: 1.2rem;
+    line-height: 7;
     display: flex;
-    gap: 2rem;
-
+    gap: 5rem;
 }
+
 
 .main-nav a {
     display: block;
     padding-top: 0.7rem;
     padding-top: 0.35rem; 
-    color: white;
-
+    color: rgb(255, 255, 255);
 }
 
-@media screen and (min-width 420px) {
+
+.main-nav img {
+    max-width: 75%;
+    max-height: auto;
+    position: 20%;
+}  
+
+/*@media screen and (min-width 420px) {
     
     header {
         background-position: 50% 50%;
         
-    }
-}
-.main-nav image {
-    max-width: 800;
-    height: auto;
-    border: 3px solid red;
-}  
+    }*/
