--- a/ProPonti/css/general.css
+++ b/ProPonti/css/general.css
@@ -1,34 +1,34 @@
 *,
-*::before
-*::after{
-box-sizing: border-box;
-text-rendering: optimizeLegibility;
--webkit-font-smooting: antialiased
-gra
-font-kerning: auto;
-
+*::before,
+*::after {
+    box-sizing: border-box;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    font-kerning: auto;
 }
 
-html{
+html {
     font-size: 100%;
     line-height: 1.2;
     -webkit-text-size-adjust: 100%;
-
-    --scroll-behavior: smooth
+    --scroll-behavior: smooth; /* Added semicolon */
     scroll-behavior: smooth;
     scroll-padding-top: 10rem;
 }
 
-body{
+body {
     color: rgb(0, 0, 0);
-    font-family: Tahoma,Verdana, sans-serif;
+    font-family: Tahoma, Verdana, sans-serif;
     background: rgb(232, 232, 232);
     margin: 0;
-    min-height: 100vh;
-    position: relative;
-    top: -9vh;
 }
 
+
+.text a {
+    color: rgb(255, 255, 255);
+    font-family: Tahoma;
+    font-size: 200%;
+  }
 
 .menu {
     margin: 0;
@@ -38,14 +38,6 @@ body{
 
 .menu li {
     list-style: none;
-    
-}
-
-
-.menu img {
-    width: 100%;
-    height: auto;
-
 }
 
 
@@ -57,7 +49,7 @@ body{
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 5000px;
+  max-width: 1500px;
   position: relative;
   margin: auto;
 }
