--- a/ProPonti/css/header.css
+++ b/ProPonti/css/header.css
@@ -1,27 +1,29 @@
+/* SLIDESHOW */
+.feature {
+    position: absolute;
+    top: 0;
+
+}
+
+.feature .content {
+    position: relative;
+    bottom: 2rem;
+}   
+/* END OF SLIDESHOW */
+
+/* HEADER */
 header {
     min-height: 0vh;
-    background-color: rgb(0, 0, 0),
-   background-;
-    
+    background-color: rgb(0, 0, 0);
     background-repeat: no-repeat;
     background-position: 45% 50%;
     background-size: cover;
+    position: relative;
 }
 
-.logo {
-    min-height: 10vh;
-    background-color: rgb(0, 0, 0),
-    background-repeat: no-repeat;
-    background-position: 45% 50%;
-    background-size: cover;
-}
-
-.logo .img {
-    max-width: 75%;
-    max-height: auto;
-    position: 10%;
-    z-index: 3;
-}
+main {
+    padding-top: 140px;
+}   
 
 .main-nav {
     width: 100vw;
@@ -54,14 +56,12 @@ header {
 
 
 .main-nav img {
-    max-width: 75%;
-    max-height: auto;
-    position: 20%;
+    max-width: 25%;
+    width: 10%;
+    position: absolute;
+    left: 1%;
+    top: 50%;
+    transform: translateY(-50%);
 }  
 
-/*@media screen and (min-width 420px) {
-    
-    header {
-        background-position: 50% 50%;
-        
-    }*/
+
