--- a/ProPonti/css/general.css
+++ b/ProPonti/css/general.css
@@ -23,6 +23,78 @@ body {
     margin: 0;
 }
 
+.description {
+  color: #ffffff;
+  width: 100vw;
+  height: 125px;
+  background-color: rgb(0, 0, 0);
+  position: relative;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-container {
+  list-style: none;
+  display: flex;
+}
+
+.number {
+  font-family: Tahoma, Verdana, sans-serif;
+  margin: 0;
+  font-size: 300%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.menu-container {
+  list-style: none;
+  display: flex;
+  gap: 100px; /* Adjust the gap between each "1050 projektov" */
+}
+
+.number-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px; /* Adjust the gap between the number and the text */
+}
+
+.number-container p {
+  margin: 0; /* Remove default margin for the <p> element */
+}
+
+.number .a {
+  width: 100%; /* Each side takes half of the width */
+  text-align: left;
+
+}
+
+.c {
+  width: 50%; /* Each side takes half of the width */
+  text-align: center;
+}
+
+.b {
+  width: 100%; /* Takes full width in the center */
+  text-align: center;
+}
+
+
+
+.description li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px; /* Adjust the gap between the number and the text */
+}
+
+.description p {
+  margin: 0; /* Remove default margin for the <p> element */
+}
 
 .text a {
     color: rgb(255, 255, 255);
@@ -98,14 +170,6 @@ body {
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 
 /* The dots/bullets/indicators */
 .dot {
@@ -132,4 +196,23 @@ body {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+.flags-container {
+  list-style: none;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.flags-container a {
+  position: relative;
+  left: -100%; /* Adjust the percentage as needed */
+  margin-top: 6px; /* Adjust the gap between the images */
+}
+
+.flags-container img {
+  width: 30px; /* Set a fixed width for the images */
+  height: auto; /* Maintain the aspect ratio */
 }
