--- a/ProPonti/Index/slideshow.css
+++ b/ProPonti/Index/slideshow.css
@@ -1,6 +1,6 @@
 /* Slideshow container */
 .slideshow-container {
-    max-width: 100%;
+    max-width: 100vw;
     width: 100vw;
     position: relative;
     top: 100px;
