--- a/ProPonti/Index/slideshow.css
+++ b/ProPonti/Index/slideshow.css
@@ -8,6 +8,7 @@
   
   }
   
+  
   /* Hide the images by default */
   .mySlides {
     display: none;
@@ -19,6 +20,7 @@
     cursor: pointer;
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
     width: auto;
     margin-top: -22px;
     padding: 16px;
@@ -52,10 +54,11 @@
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+    z-index: 9;
   }
   
   .active, .dot:hover {
-    background-color: #717171;
+    background-color: #000000;
   }
   
   /* Fading animation */
@@ -69,4 +72,19 @@
     to {opacity: 1}
   }
 
-  
+  .DOTS {
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    z-index: 10;
+
+  }
+
+  @media screen and (max-width: 400px) {
+  .DOTS {
+    top: 85%;
+}
+  }
+
