--- a/ProPonti/css/general.css
+++ b/ProPonti/css/general.css
@@ -31,3 +31,17 @@ body {
 
 }
 
+
+#backToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #383838;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 15;
+  }
