--- a/ProPonti/Index/index.css
+++ b/ProPonti/Index/index.css
@@ -8,15 +8,26 @@ article{
 .activity{
     display: block;
     position: relative;
-    top: 100%;
     border: black;
     gap: 10vw;
     justify-content: center;
     text-align: center;
-    margin: 6vh auto;
+    margin: 300px auto 100px auto;
     overflow: hidden;
 
+
  
+}
+
+
+.Logoanddesc { 
+    position: relative;
+    margin: 200px 0;
+    width: 100vw;
+    display: inline-block;
+    justify-content: center;
+    vertical-align: middle;
+
 }
 
 h2{
@@ -35,12 +46,21 @@ h2{
 
 }
 
+.descircles {
+    position: absolute;
+    width: 700px; 
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    opacity: 0.6;
+}
+
 
 .deg72 {
     position: relative;
     left: -37%;
-    top: -30%;
-    transform: rotate(72deg);
+    top: -23%;
+    transform: rotate(0deg);
 
 }
 
@@ -78,7 +98,7 @@ h2{
     height: 500px;
     position: relative;
     margin-bottom: 10px;
-    padding: 50px 75px;
+    padding: 50px 75px 0 75px;
     margin: 0 3vh 0 3vh;
     opacity: 0;
     transition: opacity 1s ease-in;
@@ -91,26 +111,33 @@ h2{
 }
 
 
+.texts {
+    position: absolute;
+    width: 50ch;
+    top: 50%;
+    transform: translateX(-47%) translateY(-50%);
+    justify-content: center;
 
+
+}
 
 
 .description {
-    margin: 200px auto 00px auto;
     height: 200px;
     max-width: 50ch;
     font-size: 1.2rem;
+    position: absolute;
+    justify-content: center;
+    left: 25%;
 }
 
-.Logoanddesc { 
-    margin-bottom: 200px;
 
-}
 
 .PPlogo {
-    position: relative;
+    position: absolute;
     width: fit-content;
     height: 200px;
-    margin: 0px auto 100px ;
+    right: 20%;
    
 
 }
@@ -158,60 +185,6 @@ h2{
 
 }
 
-@media screen and (min-width: 981px) {
-    .Logoanddesc{
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        max-width: 1080px;
-        width: 100vw;
-        margin: 300px 0px 0px 0px;
-        display: flex; 
-        
-    }
-
-    
-
-
-
-    .description{
-        position: relative;
-        margin: 0px 20px 00px 40px;
-        
-    }
-
-    .PPlogo{
-        position: relative;
-        right: 0%;
-        top: 50%;
-        transform: translateX(-0%) translateY(-50%);
-        width: 500px;
-        margin: 0px 20px 00px auto;
-       
-    }
-
-
-  
-    }
-
-
-
-    @media screen and (max-width: 350px) {
-    .PPlogo img {
-        margin-top: 200px;
-    }
-
-    .company{
-        height: fit-content;
-    }
-
-    .DOTS {
-        top: 85%;
-    }
-}
-
-
-
 .projects {
     position: relative;
     top: 0%;
@@ -234,10 +207,8 @@ h2{
     opacity: 0;
     transition: opacity 1s ease-in;
     max-width: 100vw;
-    margin: 0 100px;
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
+    margin: 0 auto;
+    width: fit-content;
 
 }
 
@@ -245,24 +216,6 @@ h2{
     opacity: 1;
 }
 
-
-
-
-
-.project-photos {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 500px;
-    height: 280px;
-    margin: 0;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
-
-}
 
 
 .image-container {
@@ -274,8 +227,7 @@ h2{
   
   .zoomable-image {
     
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+
     width: 100%;
     height: 100%;
     margin: 0;
@@ -318,11 +270,7 @@ h2{
     opacity: 1;
   }
 
-
-
-
-
-.function {
+  .function {
     position: absolute;
     top: 30%;
     left: 53%;
@@ -342,28 +290,91 @@ h2{
 
 }
 
+@media screen and (max-width: 350px) {
+    .PPlogo img {
+        margin-top: 200px;
+    }
+
+    .company{
+        height: fit-content;
+    }
+
+    .DOTS {
+        top: 85%;
+    }
+}
+
+
+
+
 
 @media screen and (max-width: 1290px) {
-    .photos{
-    display: inline-block;
-    margin: 0 auto 0 auto;
-
     
+    .Logoanddesc{
+        display: grid;
+        height: fit-content;
+        margin-bottom: 170px;
+    }
+
+
+    .description{
+        position: relative;
+        left: 50%;
+        top: 420px;
+        transform: translateX(-50%);
+    }
+
+    .PPlogo{
+        position: relative;
+        left: 0%;
+        top: -370px;
+        transform: translateX(-50%);
+    }
+
+    .activity{
+        position: relative;
+        top: 170px;
+    }
+
+
+    .strip{
+        top: 170px;
+    }
+
+    .projects {
+        top: 170px;
+        margin-bottom: 280px;
+    }
 }
-    .project-photos {
-    margin: 0px 0px 50px 0px;
-}
-}
+
 
 @media screen and (max-width: 1800px) {
+
     .photos{
     grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
 }
 }
 
-@media screen and (min-width: 1288px) {
-    .circles{
-        
+@media screen and (min-width: 2225px) {
 
+    .photos{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 60px;
+        max-width: 100vw;
+        margin: 0 auto;
+        width: fit-content;
+
+}
+
+}
+
+
+@media screen and (max-width: 1060px){
+    .photos{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: fit-content;
     }
 }
